[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Versa-Versa.otf" type="DynamicFontData" id=5]
[ext_resource path="res://HUD.gd" type="Script" id=6]
[ext_resource path="res://pressing.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Camera.gd" type="Script" id=8]
[ext_resource path="res://Level1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Controls.gd" type="Script" id=10]
[ext_resource path="res://AirStrike.tscn" type="PackedScene" id=11]
[ext_resource path="res://art/tank_green.png" type="Texture" id=12]
[ext_resource path="res://art/dotted-line.png" type="Texture" id=13]
[ext_resource path="res://addons/RadialMenu/RadialMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://addons/RadialMenu/light_default_theme.tres" type="Theme" id=15]

[sub_resource type="DynamicFont" id=9]
size = 140
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.360784, 0.0627451, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.14902, 0.611765, 0, 1 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 12 )
ProgressBar/styles/bg = SubResource( 10 )
ProgressBar/styles/fg = SubResource( 11 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 32, 28 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )
bullet_scene = ExtResource( 4 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="GhostCover" type="ColorRect" parent="HUD"]
visible = false
margin_right = 720.0
margin_bottom = 1280.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Logo" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -205.0
margin_top = 200.0
margin_right = 205.0
margin_bottom = 283.0
custom_fonts/font = SubResource( 9 )
text = "Star
Fury"
align = 1

[node name="Message" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 2 )
text = "Ready?"
align = 1

[node name="ScoreLabel" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_right = -10.0
margin_bottom = 58.0
grow_horizontal = 0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2

[node name="StartButton" type="Button" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 2.0
one_shot = true

[node name="LifeBar" type="ColorRect" parent="HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 50.0
rect_min_size = Vector2( 350, 50 )
color = Color( 0.239216, 0.239216, 0.239216, 1 )

[node name="ProgressBar" type="ProgressBar" parent="HUD/LifeBar"]
anchor_right = 5.0
margin_left = 5.0
margin_top = 5.0
margin_right = -1405.0
margin_bottom = 45.0
grow_horizontal = 0
theme = SubResource( 8 )
percent_visible = false

[node name="PowerupMenu" parent="HUD" instance=ExtResource( 14 )]
margin_right = 118.306
margin_bottom = 52.6653
rect_min_size = Vector2( 117.557, 51.459 )
rect_pivot_offset = Vector2( 58.7785, 100 )
center_radius = 0
circle_coverage = 0.2
default_theme = ExtResource( 15 )

[node name="Level" parent="." instance=ExtResource( 9 )]

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1792
limit_bottom = 1792
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 8 )

[node name="Player" parent="." groups=["player"] instance=ExtResource( 1 )]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 360, 900 )

[node name="AirStrike" parent="." instance=ExtResource( 11 )]

[node name="Controls" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 10 )

[node name="GhostPath" type="Line2D" parent="Controls"]
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 13 )
texture_mode = 1

[node name="GhostPlayer" type="Area2D" parent="Controls"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Controls/GhostPlayer"]
position = Vector2( 0, -4 )
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="Controls/GhostPlayer"]
rotation = -1.5708
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 12 )

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_StartButton_pressed"]
[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_MessageTimer_timeout"]
[connection signal="cancelled" from="HUD/PowerupMenu" to="Controls" method="_on_PowerupMenu_cancelled"]
[connection signal="item_selected" from="HUD/PowerupMenu" to="Controls" method="_on_PowerupMenu_item_selected"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="on_health_changed" from="Player" to="." method="_on_Player_health_changed"]
[connection signal="on_health_changed" from="Player" to="HUD" method="_on_Player_on_health_changed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
